get all planets with filters and tests